--- a/BNet.ASP.MVC.Pagination.Sample/BNet.ASP.MVC.Pagination.Sample.csproj
+++ b/BNet.ASP.MVC.Pagination.Sample/BNet.ASP.MVC.Pagination.Sample.csproj
@@ -1,10 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PackageLicenseFile>_License.txt</PackageLicenseFile>
+    <PackageReadmeFile>_README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\BNet.ASP.MVC.Pagination\_License.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\BNet.ASP.MVC.Pagination\_README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
