--- a/BNet.ASP.MVC.Pagination.Sample/BNet.ASP.MVC.Pagination.Sample.csproj
+++ b/BNet.ASP.MVC.Pagination.Sample/BNet.ASP.MVC.Pagination.Sample.csproj
@@ -17,15 +17,17 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+    <None Include="C:\BNet\BNet.ASP.MVC.Pagination.Sample\.editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BNet.ASP.MVC.Pagination" Version="1.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BNet.ASP.MVC.Pagination\BNet.ASP.MVC.Pagination.csproj" />
+    <EditorConfigFiles Remove="C:\BNet\BNet.ASP.MVC.Pagination.Sample\.editorconfig" />
   </ItemGroup>
 
 </Project>
