Nuget Package for Websocket Server

--- a/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
+++ b/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
@@ -1,10 +1,40 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <OutputType>Exe</OutputType>
-  </PropertyGroup>
-
+	<PropertyGroup>
+		<TargetFrameworks>net451;net452;net4.6.1;net4.6.2;net4.7;net4.7.1;net4.7.2;net4.8;net4.8.1;net5.0;net6.0;net7.0;net8.0;netstandard2.0;netstandard2.1;netcoreapp2.0;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+		<LangVersion>8.0</LangVersion>
+		<Nullable>enable</Nullable>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Title>BNet.WebSocket.Server</Title>
+		<Description>Easy to use Websocket Server supported all standard features</Description>
+		<PackageProjectUrl>https://github.com/bryanjaybodino/BNet.Library</PackageProjectUrl>
+		<IncludeSymbols>False</IncludeSymbols>
+		<PackageReadmeFile>_README.md</PackageReadmeFile>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/bryanjaybodino/BNet.Library</RepositoryUrl>
+		<PackAsTool>False</PackAsTool>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<PackageLicenseFile>_License.txt</PackageLicenseFile>
+		<Version>1.0.0</Version>
+		<IncludeLicenseFile>false</IncludeLicenseFile>
+		<OutputType>Library</OutputType>
+		<Authors>Bryan Jay Bodino</Authors>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
+	  <WarningLevel>7</WarningLevel>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0|AnyCPU'">
+	  <WarningLevel>7</WarningLevel>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
+	  <WarningLevel>4</WarningLevel>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
+	  <WarningLevel>4</WarningLevel>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.1|AnyCPU'">
+	  <WarningLevel>4</WarningLevel>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.1|AnyCPU'">
+	  <WarningLevel>4</WarningLevel>
+	</PropertyGroup>
 </Project>
