--- a/BNet.WebSocket.Server.Sample/BNet.WebSocket.Server.Sample.csproj
+++ b/BNet.WebSocket.Server.Sample/BNet.WebSocket.Server.Sample.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BNet.WebSocket.Server\BNet.WebSocket.Server.csproj">
+      <Project>{4b55a5c3-968c-4846-b3c2-e7ee10589893}</Project>
+      <Name>BNet.WebSocket.Server</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
