--- a/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
+++ b/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
@@ -16,7 +16,7 @@
 		<PackageLicenseFile>_License.txt</PackageLicenseFile>
 		<Version>1.0.0</Version>
 		<IncludeLicenseFile>false</IncludeLicenseFile>
-		<OutputType>Library</OutputType>
+		<OutputType>Exe</OutputType>
 		<Authors>Bryan Jay Bodino</Authors>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
@@ -37,4 +37,14 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.1|AnyCPU'">
 	  <WarningLevel>4</WarningLevel>
 	</PropertyGroup>
+	<ItemGroup>
+	  <None Include="..\..\Users\admin\Music\BNet.WebSocket.Server\_License.txt">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\..\Users\admin\Music\BNet.WebSocket.Server\_README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
 </Project>
