--- a/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
+++ b/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
@@ -16,7 +16,7 @@
 		<PackageLicenseFile>_License.txt</PackageLicenseFile>
 		<Version>1.0.0</Version>
 		<IncludeLicenseFile>false</IncludeLicenseFile>
-		<OutputType>Exe</OutputType>
+		<OutputType>Library</OutputType>
 		<Authors>Bryan Jay Bodino</Authors>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
