--- a/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
+++ b/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
@@ -14,9 +14,9 @@
 		<PackAsTool>False</PackAsTool>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<PackageLicenseFile>_License.txt</PackageLicenseFile>
-		<Version>2.0.0</Version>
+		<Version>3.0.0</Version>
 		<IncludeLicenseFile>false</IncludeLicenseFile>
-		<OutputType>Exe</OutputType>
+		<OutputType>Library</OutputType>
 		<Authors>Bryan Jay Bodino</Authors>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
