--- a/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
+++ b/BNet.WebSocket.Server/BNet.WebSocket.Server.csproj
@@ -16,7 +16,7 @@
 		<PackageLicenseFile>_License.txt</PackageLicenseFile>
 		<Version>6.0.0</Version>
 		<IncludeLicenseFile>false</IncludeLicenseFile>
-		<OutputType>Library</OutputType>
+		<OutputType>Exe</OutputType>
 		<Authors>Bryan Jay Bodino</Authors>
 		<AutoGenerateBindingRedirects>False</AutoGenerateBindingRedirects>
 	</PropertyGroup>
